[package]
name = "metaheurustics-rs"
version = "0.2.0"
edition = "2021"
authors = ["Arya Shah <aryaforhire@gmail.com>"]
description = "A comprehensive collection of metaheuristic optimization algorithms implemented in Rust"
license = "MIT"
repository = "https://github.com/aryashah2k/metaheuRUSTics"
documentation = "https://docs.rs/metaheurustics-rs/latest/metaheurustics_rs/algorithm/index.html"
readme = "README.md"
keywords = ["optimization", "metaheuristics", "algorithms", "pso", "genetic-algorithm"]
categories = ["algorithms", "science", "mathematics"]
exclude = [
    "plots/*",
    "Cargo.toml.orig",
]

[dependencies]
ndarray = { version = "0.15", features = ["approx"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
thiserror = "1.0"
plotters = "0.3"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[lib]
name = "metaheurustics"
path = "src/lib.rs"

[[bench]]
name = "optimization_benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false

[[example]]
name = "plot_all"
path = "examples/plot_all.rs"

[[example]]
name = "simple_optimization"
